--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,96 @@ code {
   background: rgb(40,167,69) !important;
   color: #ffffff !important;
 }
+
+.nav-left {
+  display: flex;
+  align-items: center;
+}
+
+.nav-right {
+  display: flex;
+  justify-content: flex-end;
+  flex: 1;
+}
+.nav-right div, .nav-left div{
+  padding: 0 10px;
+}
+.product-info {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 20px;
+  font-weight: 700;
+}
+.product-count{
+  color: #9b9b9b;
+}
+.row {
+  width: 100% !important;
+}
+
+.fa-lg.fa-times path {
+  fill: #ffa253;
+  cursor: pointer;
+}
+
+.card-block {
+  width: 47%;
+  color: #000;
+  padding: 20px;
+  border-bottom: 1px solid #e3e3e3;
+  margin: 1%;
+  display: flex;
+  justify-content: center;
+  text-decoration: none !important;
+}
+.card-block :hover {
+  color: #000;
+}
+.card-inner {
+  text-align: center;
+  position: relative;
+}
+.card-image {
+  height: 150px;
+  text-align: center;
+  padding: 0 50px;
+}
+.percent {
+  position: absolute;
+  background: #d0021b;
+  color: #fff;
+  font-size: 12px;
+  padding: 0.25em;
+  font-weight: 600;
+}
+.card-name {
+  font-size: 13px;
+  font-weight: 600;
+  height: 45px;
+}
+.line {
+  border: 1px solid #ddd;
+  margin: 20px 0;
+}
+.price-block {
+  display: flex;
+}
+.list-price {
+  margin-right: 10px;
+  color: #d0021b;
+}
+.default-price {
+  text-decoration: line-through;
+}
+.wish-list {
+  position: absolute;
+  right: 0;
+}
+.cards-footer {
+  display: flex;
+  justify-content: space-between;
+}
+.rating path, .wish-list path {
+  fill : #ffa253
+}
